kustomization/components/backend-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - "awsmctest.cncloudnet.com"
  gateways:
    - istio-ingress/istio-gateway
  http:
    - route:
        - destination:
            host: gatewayserver
            port:
              number: 80
      match:
        - uri:
            prefix: /
