kustomization/components/frontend-virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: banking-ns
spec:
  hosts:
    - "azurebanking.employee-mgmt.com"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: banking-frontend-service
            port:
              number: 80
